chore: install style lib mantine

--- a/header-app/package.json
+++ b/header-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview --port 4174"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.3",
+    "@mantine/hooks": "^7.17.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
