--- a/root-app/package.json
+++ b/root-app/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 4173 --host",
+    "dev": "vite --port 4173",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.3",
+    "@mantine/hooks": "^7.17.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -23,7 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0",
+    "vite": "^6.2.5",
     "vite-plugin-federation": "^0.0.1"
   }
 }
