--- a/about-app/package.json
+++ b/about-app/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "header-app",
+  "name": "about-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-<<<<<<< HEAD
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview --port 4174"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.17.3",
-    "@mantine/hooks": "^7.17.3",
-=======
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.4.1",
->>>>>>> 1a024e4 (chore: create a boiler plate)
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-<<<<<<< HEAD
-    "@originjs/vite-plugin-federation": "^1.4.0",
-=======
->>>>>>> 1a024e4 (chore: create a boiler plate)
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -37,13 +23,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-<<<<<<< HEAD
-    "vite": "^6.2.0",
-    "vite-plugin-federation": "^0.0.1"
-=======
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
->>>>>>> 1a024e4 (chore: create a boiler plate)
   }
 }
