--- a/root-app/package.json
+++ b/root-app/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.3",
-    "@mantine/hooks": "^7.17.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@module-federation/vite": "^1.2.6",
     "@originjs/vite-plugin-federation": "^1.4.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -25,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss-preset-mantine": "^1.17.0",
     "vite": "^6.2.5",
     "vite-plugin-federation": "^0.0.1"
   }
