feat: config to use env

--- a/root-app/.env.production
+++ b/root-app/.env.production
@@ -1,3 +1,1 @@
-VITE_HEADER_APP_URL=https://mf-poc-header.netlify.app
-VITE_LOGIN_APP_URL=https://mf-login-app.netlify.app
-VITE_HOME_APP_URL=https://mf-home-app.netlify.app
+VITE_PROD_ENTRY_HEADER_APP_URL=https://mf-header.netlify.app
