--- a/root-app/package.json
+++ b/root-app/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.21.0",
     "@module-federation/vite": "^1.2.6",
     "@originjs/vite-plugin-federation": "^1.4.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
