chore: install and configure chakra ui v3 in root and header app

--- a/root-app/.env.production
+++ b/root-app/.env.production
@@ -1,1 +1,1 @@
-VITE_PROD_ENTRY_HEADER_APP_URL=https://mf-header.netlify.app
+VITE_PROD_ENTRY_HEADER_APP_URL=https://mf-header.netlify.app/assets/remoteEntry.js
