--- a/header-app/package.json
+++ b/header-app/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview --port 4174"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.16.0",
+    "@chakra-ui/theme": "^3.4.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
+    "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
