--- a/root-app/.env
+++ b/root-app/.env
@@ -1,1 +1,2 @@
-VITE_ENTRY_HEADER_APP_URL=https://mf-header-poc.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_HEADER_APP_URL=http://localhost:4174/assets/remoteEntry.js
+VITE_ENTRY_LOGIN_APP_URL=http://localhost:4175/assets/remoteEntry.js
