--- a/login-app/package.json
+++ b/login-app/package.json
@@ -18,7 +18,8 @@
     "@originjs/vite-plugin-federation": "^1.4.0",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
