--- a/root-app/package.json
+++ b/root-app/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port 5000",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5000"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
