--- a/root-app/.env
+++ b/root-app/.env
@@ -1,2 +1,3 @@
 VITE_ENTRY_HEADER_APP_URL=http://localhost:4174/assets/remoteEntry.js
 VITE_ENTRY_LOGIN_APP_URL=http://localhost:4175/assets/remoteEntry.js
+VITE_ENTRY_HERO_APP_URL=http://localhost:4176/assets/remoteEntry.js
