chore: update variables

--- a/root-app/.env.production
+++ b/root-app/.env.production
@@ -1,1 +1,4 @@
-VITE_PROD_ENTRY_HEADER_APP_URL=https://mf-header.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_HEADER_APP_URL=https://mf-header-poc.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_LOGIN_APP_URL=https://mf-login.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_HERO_APP_URL=https://mf-hero-app.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_ABOUT_APP_URL=https://mf-about-app.netlify.app/assets/remoteEntry.js
