--- a/root-app/.env
+++ b/root-app/.env
@@ -1,4 +1,4 @@
-VITE_ENTRY_HEADER_APP_URL=http://localhost:4174/assets/remoteEntry.js
-VITE_ENTRY_LOGIN_APP_URL=http://localhost:4175/assets/remoteEntry.js
-VITE_ENTRY_HERO_APP_URL=http://localhost:4176/assets/remoteEntry.js
-VITE_ENTRY_ABOUT_APP_URL=http://localhost:4177/assets/remoteEntry.js
+VITE_ENTRY_HEADER_APP_URL=https://mf-header-poc.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_LOGIN_APP_URL=https://mf-login.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_HERO_APP_URL=https://mf-hero-app.netlify.app/assets/remoteEntry.js
+VITE_ENTRY_ABOUT_APP_URL=https://mf-about-app.netlify.app/assets/remoteEntry.js
