--- a/root-app/netlify.toml
+++ b/root-app/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  command = "npm run build"
+  base = "root-app"
+  command = "npm install && npm run build"
   publish = "dist"
 
 [build.environment]
