--- a/root-app/netlify.toml
+++ b/root-app/netlify.toml
@@ -1,4 +1,11 @@
 [build]
-  base = "root-app"
+  base = "root-app" # <- garante que ele entre na pasta certa
   command = "npm install && npm run build"
   publish = "dist"
+
+[build.environment]
+  NODE_ENV = "production"
+  VITE_ENTRY_HEADER_APP_URL = "https://mf-header-poc.netlify.app/assets/remoteEntry.js"
+  VITE_ENTRY_LOGIN_APP_URL = "https://mf-login.netlify.app/assets/remoteEntry.js"
+  VITE_ENTRY_HERO_APP_URL = "https://mf-hero-app.netlify.app/assets/remoteEntry.js"
+  VITE_ENTRY_ABOUT_APP_URL = "https://mf-about-app.netlify.app/assets/remoteEntry.js"
