--- a/root-app/package.json
+++ b/root-app/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5000",
+    "prebuild": "npm install -g vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --port 5000"
